Update about me

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Fork, Clone & Enjoy.
-description: Minimalistic Jekyll theme for your blog. Easy to install and setup.
+title: World of Prasanna
+description: Pouring down my thoughts here, might be useful to you ...  who knows.
 ---
 
 {% for page in paginator.posts %}
